--- a/web/guili.css
+++ b/web/guili.css
@@ -36,7 +36,7 @@ body {
   background-color: #888;
 }
 /* the background spins too, don't change it on spinning icons */
-#toolbar > i.icon-spin:hover {
+#toolbar > i.fa-spinner:hover {
   background-color: transparent;
 }
 
