--- a/web/guili.css
+++ b/web/guili.css
@@ -166,4 +166,13 @@ td.data-number {
   text-align: right;
 }
 
+.portlet-code {
+  font-family: monospace;
+}
+
+div.portlet-console-entry {
+  margin: 0;
+  padding: 0.1em;
+  border-bottom: 1px solid #888;
+}
 
