Add a prefix tag in logs, depending on sender robot

--- a/web/guili.css
+++ b/web/guili.css
@@ -237,6 +237,11 @@ div.portlet-logs-entry .log-date {
   padding-right: 1em;
 }
 
+div.portlet-logs-entry .log-tag {
+  font-size: 90%;
+  padding-right: 1em;
+}
+
 
 .portlet-asserv-done {
   color: green;
