--- a/web/guili.css
+++ b/web/guili.css
@@ -97,26 +97,31 @@ body {
 .clickmenu {
   position: absolute;
   border: 1px solid #888;
-  border-radius: 0;
   padding: 0;
   margin: 0;
   z-index: 10;
   white-space: nowrap;
 }
-.clickmenu .ui-corner-all {
-  border-radius: 0;
-}
-.clickmenu .ui-menu-item {
+
+.clickmenu > li {
+  list-style: none;
   padding: 0;
   border: none;
+  background-color: white;
 }
-.clickmenu .ui-menu-item a {
-  padding: 0.3em 0.4em;
-}
-.clickmenu .ui-menu-item a.ui-state-focus {
+
+.clickmenu > li:hover {
   background: #ccc;
-  border: none;
-  margin: 0;
+}
+
+.clickmenu > li a {
+  text-decoration: none;
+  padding: 0.3em 0.4em;
+  display: block;
+}
+
+.clickmenu > li a:visited {
+  color: inherit;
 }
 
 
@@ -166,6 +171,10 @@ body.battery-low {
 
 .portlet-header i:hover {
   opacity: 1;
+}
+
+.portlet-header .clickmenu {
+  font-size: 120%;
 }
 
 .portlet-title {
